# rmk-keyboard-firmware

./: .gitignore  NOTICE.md  TODO.md
.github/workflows/: build-central-v2.yml  build-display-hello.yml  build-display-test.yml  build-f2.yml  build-probe.yml  build-usbtest.yml  build.yml
docs/: F2-plan.md  F3-dashboard.md
dongle/: Cargo.toml  build.rs  keyboard.toml  vial.json
dongle/.cargo/: config.toml
dongle/src/: central.rs  lib.rs
dongle/src/assets/: bongo.rs  mod.rs
dongle/src/drivers/: jd9853.rs  mod.rs
left/: keyboard.toml
right/: keyboard.toml
tools/: README.md  check_devices.ps1  extract_bongo_sprites.py  list_ports.py  monitor.py
usbtest/: Cargo.toml
usbtest/.cargo/: config.toml
usbtest/src/: main.rs
