[package]
name = "rmk-dongle"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "central"
path = "src/central.rs"
test = false
bench = false

[dependencies]
# rmk from crates.io (decisão de F2-plan.md); reavaliar se falhar em ESP32-S3
# split central, caindo para `git = "https://github.com/haobogu/rmk", rev = "..."`.
rmk = { version = "0.7", default-features = false, features = [
    "esp32s3_ble",
    "split",
    "log",
    "storage",
    "vial",
] }

# ESP-rs bare-metal stack — versões alinhadas com rmk/examples/use_rust/esp32s3_ble
embassy-executor = { version = "0.10" }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.0", features = ["esp32s3", "unstable"] }
esp-storage = { version = "0.8.0", features = ["esp32s3"] }
esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
esp-radio = { version = "0.17", features = ["esp32s3", "unstable", "ble"] }
esp-rtos = { version = "0.2", features = ["esp32s3", "esp-radio", "embassy"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3", "log-04"] }
bt-hci = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false

# Patches pinando a família esp-rs a um commit testado. Mesmo usado em
# rmk/examples/use_rust/esp32s3_ble — essencial para que as versões de
# esp-hal/esp-radio/esp-rtos se alinhem com o que o rmk main espera.
[patch.crates-io]
esp-backtrace          = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-storage            = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-hal                = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-radio              = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-rtos               = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
