[package]
name = "rmk-dongle"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "central"
path = "src/central.rs"
test = false
bench = false

# Probe de diagnóstico — reproduz os passos de init do RMK esp32s3_ble
# até BleConnector::new (suspect #1), PULA o Usb::new() de propósito para
# manter o USB-JTAG vivo e transmitir os info! para o host. Se o probe
# chega ao loop heartbeat, sabemos que passos 1-9 do RMK estão OK e o
# travamento do F1 está em storage/run_ble/USB. Se trava antes, o último
# log aponta onde.
[[bin]]
name = "probe"
path = "src/bin/probe.rs"
test = false
bench = false

# Central v2 — firmware de produção do dongle sem usar `#[rmk_keyboard]`.
# Reordena o init: USB HID sobe imediatamente, contornando o travamento
# de `rmk::ble::run_ble` no F1. Enumera como VID 4C4B:4643, emite 'R' a
# cada 30s como prova de vida.
[[bin]]
name = "central_v2"
path = "src/bin/central_v2.rs"
test = false
bench = false

# Display test — F3 bring-up. Port do driver C do mimiclaw para Rust
# bare-metal. Init do JD9853 via SPI2 + fill vermelho da tela 172×320.
[[bin]]
name = "display_test"
path = "src/bin/display_test.rs"
test = false
bench = false

# Display hello — F3 próxima etapa. Mesmo driver JD9853 do display_test,
# mas implementa DrawTarget do embedded-graphics e desenha "Hello RMK".
[[bin]]
name = "display_hello"
path = "src/bin/display_hello.rs"
test = false
bench = false

[dependencies]
# rmk do git main porque crates.io 0.7.x não expõe a feature `vial` (e outras
# features que queremos já estão só em main). Quando sair versão > 0.7.8 com
# vial feature disponível, re-pinar em crates.io.
rmk = { git = "https://github.com/HaoboGu/rmk", branch = "main", default-features = false, features = [
    "esp32s3_ble",
    "split",
    "log",
    "storage",
    "vial",
] }

# ESP-rs bare-metal stack — versões alinhadas com rmk/examples/use_rust/esp32s3_ble
embassy-executor = { version = "0.10" }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.0", features = ["esp32s3", "unstable"] }
esp-storage = { version = "0.8.0", features = ["esp32s3"] }
esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
esp-radio = { version = "0.17", features = ["esp32s3", "unstable", "ble"] }
esp-rtos = { version = "0.2", features = ["esp32s3", "esp-radio", "embassy"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3", "log-04"] }
bt-hci = { version = "0.8" }
rand_core = { version = "0.6", default-features = false }

# Usadas diretamente pelo bin probe (no central.rs vêm transitivamente do rmk).
embassy-time = { version = "0.4" }
embassy-futures = { version = "0.1" }
embassy-usb = { version = "0.5.1", default-features = false }
log = { version = "0.4" }
embedded-storage = { version = "0.3" }
usbd-hid = { version = "0.9" }
embedded-hal = { version = "1.0" }
embedded-graphics = { version = "0.8" }
heapless = { version = "0.8" }

[build-dependencies]
# Usado pelo build.rs para gerar config_generated.rs com VIAL_KEYBOARD_DEF/ID
# a partir de vial.json. Mesmas versões do exemplo upstream.
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false

# Patches pinando a família esp-rs a um commit testado. Mesmo usado em
# rmk/examples/use_rust/esp32s3_ble — essencial para que as versões de
# esp-hal/esp-radio/esp-rtos se alinhem com o que o rmk main espera.
[patch.crates-io]
esp-backtrace          = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-storage            = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-hal                = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-radio              = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-rtos               = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "20ed2bc36627581e02b227d61db41b11c11891b7" }
