[package]
name = "usbtest"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Crate de diagnóstico temporário: USB HID keyboard mínimo sobre esp-hal +
# embassy, SEM rmk/BLE/split/storage. Se este binário enumera como VID 4C4B
# no host, o problema do F2 está dentro do stack rmk (BLE init, storage,
# split); se não enumera nem este, o problema é mais fundamental (esp-hal
# USB OTG config, cabo, ou Windows driver).
#
# O USB OTG (GPIO19/20) e o USB-Serial/JTAG nativo do ESP32-S3 compartilham
# o MESMO par físico de pinos — só um pode estar ativo. Qualquer log emitido
# após o OTG ser ligado não chega ao host via USB-JTAG (o JTAG foi derrubado).
# Por isso os logs via esp-println ficam densos ANTES do driver USB subir.

[[bin]]
name = "usbtest"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# esp-rtos substitui o antigo esp-hal-embassy (abandonado quando esp-hal 1.0
# final saiu: a feature interna __esp_hal_embassy foi removida mas esp-hal-embassy
# 0.9.x ainda a requer). esp-rtos é a runtime embassy oficial da esp-rs hoje.
esp-rtos               = { version = "0.2", features = ["embassy", "log-04"] }
esp-hal                = { version = "=1.0.0", features = ["esp32s3", "log-04", "unstable"] }
esp-backtrace          = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-println            = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-alloc              = { version = "0.9" }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3", "log-04"] }

# embassy-executor 0.9 (não 0.10) é o que esp-rtos 0.2 espera.
embassy-executor = "0.9"
embassy-futures  = "0.1"
embassy-time     = "0.4"
embassy-usb      = { version = "0.5.1", default-features = false }
usbd-hid         = "0.9"
log              = "0.4"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
